kong-ingress-controller-non-http/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: kong-nonhttp
spec:
  controller: ingress-controllers.konghq.com/kong-nonhttp
