kong-ingress-controller-non-http/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: echo-plaintext
  namespace: application
spec:
  parentRefs:
  - name: kong-gateway-nonhttp
    sectionName: stream9000
    namespace: public-gateway
  rules:
  - backendRefs:
    - name: echo
      port: 1025

---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: echo-plaintext-2
  namespace: application
spec:
  parentRefs:
  - name: kong-gateway-nonhttp
    sectionName: stream9001
    namespace: public-gateway
  rules:
  - backendRefs:
    - name: echo
      port: 1025
